# fastapi_clean

./: .env  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f26537ed856_create_message_table.py  9727b242a0bb_create_todo_list.py  99bc62c86840_create_message_table.py  9f13b1d51bfe_change_todolist_user_from_user_id_to_.py  c038a14a806f_delete_todolist_user.py  cc2ba5882711_create_user_table.py
app/: logging.py  main.py  setting.py
app/api/: login.py  message.py  user.py
app/crud/: base.py  crud_message.py  crud_todo_list.py  crud_user.py  crud_users.py
app/db/: db_connect.py  db_models.py
app/grpc/: grpc.proto  grpc_pb2.py  grpc_pb2_grpc.py
app/middleware/: token_authentication.py
app/routers/: login.py  todo_list.py  user.py
app/schemas/: login.py  message.py  todo_list.py  user.py  users.py
app/utils/: app_error.py  http_exception.py  log.py  login.py  message.py  todo_list.py  user.py  verify.py
grpc/: grpc.proto  grpc_client.py  grpc_pb2.py  grpc_pb2_grpc.py  grpc_server.py
grpc/crud/: base.py  crud_users.py
grpc/db/: db_connect.py
test/: test_main.py
