[tool.poetry]
name = "fastapi_clean"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^4.0.1"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
SQLAlchemy = "^1.4.43"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.2.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
